<resources>
    <string name="app_name">AirNotes</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="password">Enter New Password</string>
    <string name="email_address">Enter Email Address</string>
    <string name="don_t_have_an_account_register">Don\'t have an account ? Register</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="name">Enter Username</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="login_using_mobile_otp">Login using Mobile OTP</string>
    <string name="signin_using_mobile_otp">SignIn using Mobile OTP</string>
    <string name="login_using_email_address">Login using Email Address</string>
    <string name="verify">Verify</string>
    <string name="enter_mobile_number">Enter 10 digit Mobile Number</string>
    <string name="link_to_existing_account">Link to Existing Account</string>
    <string name="link_now">Link Now</string>
    <string name="please_enter_email_id">Please enter Email Id</string>
    <string name="don_t_have_email_create_one">Don\'t have Email ? Create one</string>
    <string name="title_activity_main_screen">main_screen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_creating_notes_with_airnotes">Start creating notes with AirNotes</string>
    <string name="save_now">Save Now</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="day_mode">Day Mode</string>
    <string name="light_mode">"\U+1F31E"</string>
    <string name="dark_mode">"\U+1F31C"</string>
    <string name="msg_token_fmt"></string>
</resources>