<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".register_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/back_arrow_registerScreen"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:contentDescription="@string/todo"
            android:onClick="to_welcome_screen"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="RtlHardcoded,VectorDrawableCompat" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/register"
            android:textColor="@color/silver_grey"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@drawable/round_layout_bg"
        android:padding="20dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enter_mailId_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/enter_mobile_number"
                android:textColor="@color/silver_grey"
                android:textSize="20sp"
                android:visibility="gone"
                android:paddingVertical="15dp"
                android:textStyle="normal" />

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_baseline_person_24"/>



                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/silver_grey"
                    android:textSize="18sp" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_baseline_email_24"/>

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/silver_grey"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_baseline_phone_24"/>

                <EditText
                    android:id="@+id/editTextMobileRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/silver_grey"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_baseline_vpn_key_24"/>

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/silver_grey"
                    android:textSize="18sp" />



            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_pink_button"
            android:fontFamily="casual"
            android:onClick="verify_now"
            android:text="@string/verify"
            android:visibility="gone"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_pink_button"
            android:fontFamily="casual"
            android:text="@string/register"
            android:onClick="register_now"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signin_otp_textView"
            android:text="@string/signin_using_mobile_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:onClick="sign_in_using_otp"
            android:visibility="visible"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/to_login_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/grey_translucent_bg"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:onClick="to_login_screen"
            android:padding="12dp"
            android:text="@string/already_have_account_login"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>