<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".link_with_existing_account">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/round_layout_bg"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enter_mailId_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="Link with your EmailId"
                android:textColor="@color/silver_grey"
                android:textSize="20sp"
                android:paddingVertical="15dp"
                android:visibility="visible"
                android:textStyle="normal" />

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_baseline_person_24"/>

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/silver_grey"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:contentDescription="TODO"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_email_24"
                    tools:ignore="ContentDescription,HardcodedText" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/silver_grey"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_vpn_key_24" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/silver_grey"
                    android:textSize="18sp"
                    android:visibility="visible" />

            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/link_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_green_button"
            android:fontFamily="casual"
            android:onClick="link_now"
            android:text="@string/link_now"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />


    </LinearLayout>



</LinearLayout>